comienzo a actualizar contenido. Elimino flyers falsos

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,8 +9,8 @@ $color-4: #2ba685;
 
 $color-0: #000a12;
 $color-1: #00284d;
-$color-2: #05455e;
-$color-3: #005961;
+$color-2: #073f55;
+$color-3: #00454b;
 $color-4: #2ba685;
 
 $bordes: 3%;
