--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -74,3 +74,19 @@ section {
         padding-bottom: 5%;
     }
 }
+
+.transicion3 {
+    // Transicion excepcional entre secciones 1 y 3.
+    background: $color-1;
+    background: linear-gradient(180deg, $color-1 39%, $color-3 70%);
+
+    width: 100%;
+    height: 60px;
+
+    text-align: center;
+    justify-content: center;
+
+    p {
+        padding-bottom: 5%;
+    }
+}
