--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ $color-4: #2ba685;
 }
 
 header {
-  background-color: #061C78;
+  background-color: #07144a;
 }
 
 footer {
@@ -55,7 +55,7 @@ section h2 {
 }
 
 .seccion2 {
-  background-color: #05455e;
+  background-color: #073f55;
   color: white;
 }
 @media (min-width: 768px) {
@@ -65,7 +65,7 @@ section h2 {
 }
 
 .seccion3 {
-  background-color: #005961;
+  background-color: #00454b;
   color: white;
 }
 @media (min-width: 768px) {
@@ -85,7 +85,7 @@ section h2 {
 
 .transicion1 {
   background: #00284d;
-  background: linear-gradient(180deg, #00284d 39%, #05455e 70%);
+  background: linear-gradient(180deg, #00284d 39%, #073f55 70%);
   width: 100%;
   height: 60px;
   text-align: center;
@@ -96,14 +96,26 @@ section h2 {
 }
 
 .transicion2 {
-  background: #05455e;
-  background: linear-gradient(180deg, #05455e 39%, #005961 70%);
+  background: #073f55;
+  background: linear-gradient(180deg, #073f55 39%, #00454b 70%);
   width: 100%;
   height: 60px;
   text-align: center;
   justify-content: center;
 }
 .transicion2 p {
+  padding-bottom: 5%;
+}
+
+.transicion3 {
+  background: #00284d;
+  background: linear-gradient(180deg, #00284d 39%, #00454b 70%);
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  justify-content: center;
+}
+.transicion3 p {
   padding-bottom: 5%;
 }
 
@@ -192,7 +204,8 @@ h2 {
   object-fit: cover;
 }
 
-#flyers img, #flyers iframe {
+#flyers img,
+#flyers iframe {
   object-fit: cover;
 }
 #flyers iframe {
@@ -247,6 +260,15 @@ h2 {
 }
 #materialDidactico h3 {
   font-size: 2em;
+}
+
+#contacto-metodos a {
+  color: white;
+  outline: none;
+  text-decoration: none;
+}
+#contacto-metodos a:hover {
+  color: pink;
 }
 
 /*# sourceMappingURL=styles.css.map */
