--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,4 @@
 @import"./pages/composiciones";
 @import"./pages/material-audiovisual";
 @import "./pages/material-didactico";
+@import "./pages/contacto"
